renamed package to ensure restore picks up the right one

--- a/src/AspNet.Identity.MongoDB/AspNet.Identity.MongoDB.nuspec
+++ b/src/AspNet.Identity.MongoDB/AspNet.Identity.MongoDB.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>AspNet.Identity.MongoDB</id>
+    <id>Sayari.AspNet.Identity.MongoDB</id>
     <version>2.1.1</version>
     <authors>Wes Higbee</authors>
     <owners>Wes Higbee</owners>
